# JobRadar

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
docs/milestones/: 01-skeleton.md
